Event logging functional, recovery for simple case